# privylm

./: index.py  pyproject.toml
agents/: chatAgent.py
components/: dialogs.py  message_boxes.py
experiments/: gen.ipynb  streamlit-exp.py
managers/: cookieManager.py  eventManager.py  sessionManager.py
pages/: SImple Chat Assistant.py
