[project]
name = "privylm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "groq>=0.16.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.9",
    "langchain-groq>=0.2.4",
    "langchain-kuzu>=0.3.0",
    "langchain-openai>=0.3.3",
    "langsmith>=0.3.4",
    "mistralai>=1.5.0",
    "neo4j>=5.27.0",
    "pymongo>=4.11",
    "streamlit>=1.41.1",
    "streamlit-extras>=0.5.0",
    "uvicorn>=0.34.0",
    "streamlit-cookies-controller>=0.0.4",
    "pydantic[email]>=2.10.6",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "playwright>=1.49.1",
    "pymysql>=1.1.1",
    "langchain-mistralai>=0.2.6",
]
